// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > should render 1`] = `
<DocumentFragment>
  <label
    class="flex items-center cursor-pointer h-4"
  >
    <input
      class="toggle-input sr-only"
      type="checkbox"
    />
    <div
      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
    >
      <span
        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-secondary-400 dark:bg-theme-secondary-600 h-4 w-4 handle-inner"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render always on 1`] = `
<DocumentFragment>
  <label
    class="flex items-center cursor-pointer h-4"
  >
    <input
      class="toggle-input sr-only"
      type="checkbox"
    />
    <div
      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
    >
      <span
        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-4 w-4 handle-inner"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render disabled 1`] = `
<DocumentFragment>
  <label
    class="flex items-center cursor-not-allowed h-4"
  >
    <input
      class="toggle-input sr-only"
      disabled=""
      type="checkbox"
    />
    <div
      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
    >
      <span
        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-100 dark:bg-theme-secondary-800 h-4 w-4"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render small 1`] = `
<DocumentFragment>
  <label
    class="flex items-center cursor-pointer h-3"
  >
    <input
      class="toggle-input sr-only"
      type="checkbox"
    />
    <div
      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
    >
      <span
        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-secondary-400 dark:bg-theme-secondary-600 h-3 w-3 handle-inner"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="flex items-center cursor-pointer h-4"
  >
    <input
      class="toggle-input sr-only"
      type="checkbox"
    />
    <div
      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
    >
      <span
        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-secondary-400 dark:bg-theme-secondary-600 h-4 w-4 handle-inner"
      />
    </div>
  </label>
</DocumentFragment>
`;
